# feeds-to-instapaper

./: .gitignore  Cargo.toml  README.md  example.config.yaml
samples/: ghc.xml  junk.xml  pike.xml
src/: failure_ext.rs  fs_ext.rs  instapaper.rs  lib.rs  main.rs  syndication.rs
