[package]
name = "feeds-to-instapaper"
version = "0.13.0"
authors = ["Sergey Parshukov <codedby@bugman.me>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jBugman/feeds-to-instapaper"
description = "Post new items from specified RSS/Atom feeds to Instapaper"
publish = false

[[bin]]
name = "instapaper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
atom_syndication = "0.11"
atty = "0.2.10"
clap = { version = "3.2", features = ["derive"] }
csv = "1.1"
dialoguer = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
shellexpand = "2.1"
url = "2.2"
yansi = "0.5"
